# russian-motion-verbs

./: Cargo.toml  LICENSE  dictionary.csv
src/: dictionary.rs  game.rs  main.rs  mutation.rs
